# Mapping

./: .gitignore
Aestrela/: Aestrela.sln  Aestrela.vcxproj  Aestrela.vcxproj.filters  PathFindingAEstrela.cpp
Astar/: astar  astar.cpp  astar.py  imageCellDivision.pgm
OccupancyGrid/: 1Parte 1.txt  OccupancyGrid.sln  OccupancyGrid.vcxproj  imageGrid.pgm  main.cpp  output.yaml
OccupancyGridCmake/: CMakeLists.txt  README.md
OccupancyGridCmake/src/: main.cpp
OccupancyGridCmake/static/: imageGrid.pgm
